--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.1",
   "private": "true",
   "description": "A clean, beautiful and responsive portfolio template for Developers!",
-  "source": "src/index.html",
+  "source": [
+    "src/index.html",
+    "src/articlesgallery.html", 
+    "src/socialmediagallery.html",
+    "src/othergallery.html",
+    "src/project-gallery.html",
+    "src/client-detail.html"
+  ],
   "scripts": {
     "start": "parcel",
     "build": "parcel build"
